Opened 7 years ago

Closed 7 years ago

#8565 closed defect (fixed)

There is no non-neon version of idctdsp on aarch64

Reported by: ilya-fedin Owned by:
Priority: normal Component: avcodec
Version: git-master Keywords: arm64
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Summary of the bug:
How to reproduce:

  1. Compile ffmpeg with --disable-neon on aarch64
  2. Link it to some app, for example tdesktop, there will be a linkage error
    /build/alish-tdesktop/stage/usr/lib/libavcodec.a(idctdsp.o): In function `ff_idctdsp_init':
    idctdsp.c:(.text.unlikely+0x314): undefined reference to `ff_idctdsp_init_aarch64'
    

More info: https://github.com/telegramdesktop/tdesktop/issues/6647#issuecomment-597452642

Change History (1)

comment:1 by Carl Eugen Hoyos, 7 years ago

Component: undeterminedavcodec
Keywords: arm64 added
Reproduced by developer: set
Resolution: fixed
Status: newclosed
Version: unspecifiedgit-master

For future tickets: Please try to reproduce the issue you want to report with FFmpeg (without any third party tool) and please provide all information (except large input files) here on the bug tracker, do not link to external resources instead.

Should be fixed in 951bd2557294d7f4d6b1c2b81dde21204a2b71bc

Note: See TracTickets for help on using tickets.