lavc/aarch64: Fix compilation with --disable-neon

Fixes ticket #8565.